Making user authentication work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,9 @@
 	<body>
 		<nav id="nav"></nav>
 		<main id="main"></main>
+		<script type="text/javascript">
+			window.user = <%- user ? JSON.stringify(user) : '{}' %>;
+		</script>
 		<script type="text/javascript" src="<%= env === 'development' ? '/scripts/bundle.js' : '/scripts/bundle.min.js?'+version %>"></script>
 	</body>
 </html>
