--- a/public/styles/_login.scss
+++ b/public/styles/_login.scss
@@ -1,6 +1,20 @@
+@import 'variables';
+
 .loginSection {
 	border: 1px solid black;
 	width: 50%;
 	text-align: center;
 	margin: 0 auto;
+	background: $sectionBackground;
+} 
+
+.loginHeaders {
+	color: $textColor;	
 }
+
+.loginButton {
+	background: $buttonBackground;
+	border-radius: 0.5em;
+	color: $buttonColor;
+}
+
