--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="<%= env === 'development' ? '/styles/main.scss.css' : '/styles/main.scss.min.css?'+version %>" />
 
 	</head>
-	<body>
+	<body class="body">
 		<nav id="nav"></nav>
 		<main id="main"></main>
 		<script type="text/javascript">
