saving products to backend

--- a/public/styles/_variables.scss
+++ b/public/styles/_variables.scss
@@ -1,5 +1,5 @@
 $buttonBackground: green;
-$bodyBackground: yellow;
+$bodyBackground: #E5E5E5;
 $textColor: teal;
-$sectionBackground: #84D2F0;
+$sectionBackground: #A7C6DE;
 $buttonColor: #fff;
