--- a/public/styles/_home.scss
+++ b/public/styles/_home.scss
@@ -29,3 +29,9 @@
 	color: $buttonColor;
 	text-decoration: none;
 }
+
+.productContainer {
+	text-align: center;
+	color: $textColor;
+	font-size: 1.5em;
+}
